# pi-tv-remote

./: .gitignore  README.md  pyproject.toml  requirements.txt  run_tests  setup.py
pi_tv_remote/: __init__.py  cec_adapter.py  cec_utils.py  cli.py
pi_tv_remote/tests/: README.md  __init__.py  conftest.py  deploy_and_test_on_pi.sh  run_tests.sh  test_cec_adapter.py  test_cec_adapter_real_tv.py  test_remote_listener.py
pi_tv_remote/tests/test_tools/: deploy_and_test_on_pi.sh
tests/: __init__.py  test_cec_adapter_real_tv.py  test_remote_listener.py
tests/test_tools/: deploy_and_test_on_pi.sh  run_tests.sh
